fixed positioning but now its not centered...

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,5 @@
 
 #board {
   background-color: orange;
-  margin-right: auto;
-  margin-left: auto;
+  position: absolute;
 }
